<resources>
    <string name="app_name">InventoryControl</string>

    <string name="menu_register">Register</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_history">History</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="empty">is empty</string>
    <string name="empty2">is empty</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="two_weeks">Two weeks</string>
    <string name="month">Month</string>
    <string name="two_months">Two months</string>
    <string name="three_months">Three months</string>
    <string name="restore">Restore</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product name</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_price">Product price (optional)</string>
    <string name="category">Category (optional)</string>
    <string name="details">Details (optional)</string>
    <string name="change_language">Change language</string>
    <string name="one_day">One day</string>
    <string name="two_days">Two days</string>
    <string name="three_days">Three days</string>
    <string name="four_days">Four days</string>
    <string name="five_days">Five days</string>
    <string name="six_days">Six days</string>
    <string name="seven_days">Seven days</string>
    <string name="language">Language</string>
    <string name="stocktaking">Stocktaking</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="tDate">Date</string>
    <string name="deleted">was deleted</string>
    <string name="tIn">transaction in</string>
    <string name="tOut">transaction out</string>
    <string name="changed">was changed</string>
    <string name="current">Current</string>
    <string name="product_picture">Product picture (optional)</string>
    <string name="save_product">Save product</string>
    <string name="must_number">Must be a number</string>
    <string name="low_quantity">Insufficient quantity</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="current_quantity">Current quantity</string>
    <string name="total_in">Total in</string>
    <string name="total_out">Total out</string>
    <string name="price">Price</string>
    <string name="total_price">Total price</string>
    <string name="category2">Category</string>
    <string name="details2">Details</string>
    <string name="status">Status</string>
    <string name="created_date">Created date</string>
    <string name="delete">Delete</string>
    <string name="quantity_in">Quantity in</string>
    <string name="quantity_out">Quantity out</string>
    <string name="change_category">Change category</string>
    <string name="add_details">Add details</string>
    <string name="change_name">Change name</string>
    <string name="change_price">Change price</string>
    <string name="general_category">General category</string>
    <string name="no_details">No details</string>
    <string name="product_picture2">Product picture</string>
    <string name="press_again">Press back again</string>
    <string name="normal">Normal</string>
    <string name="empty_stock">Stock is empty</string>
    <string name="dead_stock">Dead stock</string>
    <string name="empty_in">Stock will be empty in</string>
    <string name="one_week">One week</string>
    <string name="cold_stock">Cold stock</string>
    <string name="very_cold_stock">Very cold stock</string>
    <string name="warning">Warning</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light_blue</string>
    <string name="purple">Purple</string>
    <string name="total_stock">Total stock</string>
    <string name="total_product">Total products</string>
    <string name="about">About</string>
    <string name="how_to_start">How to start</string>
    <string name="about_more_details">
        Inventory control is an app that manages and track your product stock and control inventory.\n\n\n
        A free, simple, and compact app that manages product import and export transactions easily.\n\n\n
        Shows summary of import, export and in hand stock of each product.\n\n\n
        As long as orders are coming in, stock level will constantly shift. That\'s why tracking in real
        time is so important; it allows you to accurately view stock levels at any given time, even across
        warehouse locations.\n\n\n
        Track inventory levels in real time knowing what (and how much) you have in stock and where it is
        stored.\n\n\n
        Reduce the risk of inventory shrinkage.\n\n\n
    </string>
    <string name="start_more_details">
        Go to Register and type your product name and quantity.\n\n\n
        Then open Inventory and select category, then select one product and see product details.\n\n\n
        Change some details like add total in or total out or delete product.\n\n\n
        Then open History and see the change you made.\n\n\n
    </string>
    <string name="register_more_details">
        This is the first step for every product you have in your stock.\n\n\n
        You must type the name and quantity before saving the product.\n\n\n
        You can add or update everything about every single product later in Inventory.\n\n\n
    </string>
    <string name="inventory_more_details">
        Category\'s can be anything you like; for example: different stocks or group of products.\n\n\n
        In every single product, you can see and update all details and do transactions.\n\n\n
        You can also remove product, and restored from Settings.\n\n\n
    </string>
    <string name="history_more_details">
        Track all; see what happened and when.\n\n\n
        Here you can view all transactions and reports.\n\n\n
        In every week and month(or the interval of your choice), you will find a new PDF file in your device storage.\n\n\n
        And you can make new PDF file of week report, any time.\n\n\n
    </string>
    <string name="notifications_more_details">
        After the system do stocktaking and review your stock, you will get notified every time.\n\n\n
    </string>
    <string name="settings_more_details">
        There are tow language for this app: English and Arabic.\n\n\n
        Stocktaking is the act of taking inventory. Here you can choose stocktaking interval.\n\n\n
        Also you can choose notification interval.\n\n\n
        In recycle bin, you can review removed product and restored.\n\n\n
    </string>
    <string-array name="front_lines">
        <item>About</item>
        <item>How to start</item>
        <item>Register</item>
        <item>Inventory</item>
        <item>History</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string-array name="briefs">
        <item>What is this app doing, and why you should use it</item>
        <item>Simple example for new user</item>
        <item>Add new product with all the details you like</item>
        <item>View and manege your products, and update the stock</item>
        <item>Track your activities; see what happen and when</item>
        <item>Reminder for what happening in stock and stocktaking</item>
        <item>Manage your business and control what you see in the app</item>
    </string-array>
    <string name="transactions">Transactions</string>
    <string name="reports">Reports</string>
    <string name="week_out">Week out</string>
    <string name="stock_total_in">Stock total in</string>
    <string name="stock_total_out">Stock total out</string>
    <string name="newReport">New PDF Report</string>
</resources>