<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_register"
        android:icon="@drawable/ic_menu_register"
        android:title="@string/menu_register" />

    <item
        android:id="@+id/nav_inventory"
        android:icon="@drawable/ic_menu_inventory"
        android:title="@string/menu_inventory" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/menu_history" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/menu_help" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_48"
        android:title="@string/menu_settings" />

</menu>