<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#757575"
            android:hint="@string/product_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#757575"
            android:hint="@string/product_quantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#757575"
            android:hint="@string/product_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#757575"
            android:hint="@string/category">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:textColorHint="#757575"
            android:hint="@string/details">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_empty_photo"
                android:scaleType="fitXY"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_txt"
                android:layout_alignLeft="@+id/picture"
                android:layout_alignTop="@+id/picture"
                android:layout_alignRight="@+id/picture"
                android:layout_alignBottom="@+id/picture"
                android:gravity="center"
                android:text="@string/product_picture"
                android:textColor="@color/purple_500"
                android:layout_alignStart="@+id/picture"
                android:layout_alignEnd="@+id/picture"
                app:layout_constraintEnd_toEndOf="@+id/picture"
                app:layout_constraintStart_toStartOf="@+id/picture"
                app:layout_constraintTop_toBottomOf="@+id/picture"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:id="@+id/save_action"
            android:layout_marginTop="10dp"
            android:text="@string/save_product" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>